# Octop

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
dashboard/public/: manifest.json  octop-mascot-peek.webm  octop-mascot-type.webm  offline.html  pcm-processor.js
dashboard/scripts/: gen-asset-index.mjs
dashboard/src/: App.tsx  i18n.ts  main.tsx  pwa-prompt.ts  pwa.ts  sw-register.ts
dashboard/src/api/: config.ts  index.ts  probeHealth.ts  request.ts
dashboard/src/components/: AgentProfileDrawer.module.less  AgentProfileDrawer.tsx  AgentSelector.module.less  AgentSelector.tsx  AuthFileDownloadLink.tsx  AuthGuard.tsx  AuthImage.module.less  AuthImage.tsx  AvatarDropdown.tsx  BackendBuilder.tsx  BrowserAiPanel.module.less  BrowserAiPanel.tsx  LanguageSwitcher.tsx  MbtiPersonaTag.tsx  RequireAdmin.tsx  ServiceRestartOverlay.module.less  ServiceRestartOverlay.tsx  SkillRecordGuideModal.tsx  ThemeSwitcher.tsx
dashboard/src/context/: AgentContext.tsx  ScrollContext.tsx  ServiceRestartContext.tsx  ThemeContext.tsx  VoiceOutputContext.tsx
dashboard/src/hooks/: useAgentFormResources.ts  useAgentThreadChat.ts  useAsyncResource.ts  useAudioUnlock.ts  useAuthImageSrc.ts  useBrowserCanvasInteraction.ts  useBrowserSessionState.ts  useBrowserStream.ts  useCanvasPanScroll.ts  useCardTableView.ts  useDesktopCanvasInteraction.ts  useDesktopInstall.ts  useDesktopStream.ts  useElapsedSeconds.test.ts  useElapsedSeconds.ts  useEmbeddingDownloadWS.ts  useFilteredList.ts  useHorizontalResize.ts  useIsMobile.ts  useKeyboardOffset.ts  useLandscapeFullscreen.ts  useRemoteBrowserBookmarks.ts  useServerTimezone.ts  useServiceRestart.test.ts  useServiceRestart.ts  useSlashCommands.ts  useTerminalAutopilot.ts  useUpdateStatus.ts  useUserRole.ts  useViewportMode.ts  useVoiceConfig.ts  useVoiceInput.ts  useVoiceOutput.ts
dashboard/src/layouts/: Header.tsx  PageShell.module.less  PageShell.tsx  Sidebar.module.less  Sidebar.tsx
dashboard/src/locales/: en.json  zh.json
dashboard/src/routes/: index.tsx  prefetch.ts
dashboard/src/styles/: form-override.css  layout.css  theme-vars.css
dashboard/src/test/: memoryFixtures.ts  setup.ts
dashboard/src/utils/: agentError.ts  apiError.ts  browserCanvas.ts  browserSpeech.ts  browserTabs.ts  browserViewport.ts  collectTurnToolMedia.ts  confirmModal.ts  desktopViewport.ts  embeddingDownload.ts  fileTreeIcon.tsx  formatMessageTime.test.ts  formatMessageTime.ts  formatToolArguments.ts  headerUtils.ts  locale.ts  localePrefs.test.ts  localePrefs.ts  localizedText.ts  messageParser.history.test.ts  messageParser.ts  mobileDevice.ts  mobileTypeScale.ts  modelOptions.ts  normalizeUrl.ts  parseAcpPermission.ts  parseHarnessChunk.ts  plainTextForSpeech.test.ts  plainTextForSpeech.ts  quickInputPrefill.ts  shellCodeBlock.ts  showApiToast.ts  slashCategories.ts  slashFallbackCommands.ts  slashIcons.ts  toolMediaBlocks.ts  updateStatusCache.test.ts  updateStatusCache.ts  workspacePath.ts
docker/: README.md  README_CN.md  docker-compose.yml  docker-entrypoint.sh  docker_build.sh  docker_deploy.sh
docs/: acp.md  agent-backend-file-io.md  agent-call-agent.md  agent-delegation.md  agent-interop-mailbox.md  api.md  architecture.md  cli.md  configuration.md  personas.md  user-guide.html  user-guide.md
docs/adr/: 001-single-process-model.md
scripts/: README.md  install.bat  install.ps1  install.sh  smoke_memory_api.py  wheel_build.ps1  wheel_build.sh
src/octop/: __init__.py  __main__.py  config.py  launch.py
src/octop/api/: app.py  deps.py  openapi_meta.py
src/octop/cli/: __init__.py  main.py  registry.py
src/octop/i18n/: __init__.py  en.json  loader.py  zh.json
src/octop/infra/: __init__.py  errors.py  metrics.py  server.py
tests/: conftest.py
tests/integration/: conftest.py  test_acp_api.py  test_admin_providers.py  test_agents_api.py  test_agents_list_scope.py  test_auth_flow.py  test_boundary_authz.py  test_browser_api.py  test_browser_record_replay_api.py  test_channel_probe_draft.py  test_channel_test_endpoint.py  test_channels_api.py  test_chat_sse.py  test_chat_ws.py  test_connectors_api.py  test_cron_api.py  test_dashboard_serve.py  test_e2e_golden_path.py  test_envs_api.py  test_experts_api.py  test_filesystem_api.py  test_memory_api.py  test_personas_admin_api.py  test_preferences_api.py  test_provider_test_draft.py  test_provider_test_endpoint.py  test_providers_api.py  test_scalar.py  test_security_api.py  test_server_lifecycle.py  test_setup_bootstrap.py  test_setup_wizard.py  test_skills_api.py  test_skills_hub.py  test_subagents_api.py  test_terminal_context.py  test_terminal_ws.py  test_update_api.py  test_upload_api.py  test_usage_api.py  (+2 more)
tests/live/: conftest.py  test_agent_expert_template_live.py  test_agent_manager_live.py  test_connector_probe.py  test_oss_storage.py
tests/support/: __init__.py  app.py  auth.py  fakes.py  harness.py  http.py  scenarios.py  secrets.py
tests/unit/: test_cli_main.py  test_cli_state.py  test_config.py  test_connectors.py  test_env_file.py  test_errors.py  test_host_paths.py  test_identity.py  test_langfuse_settings.py  test_logging.py  test_metrics.py  test_password.py  test_paths.py  test_plugin_manager.py  test_plugins.py  test_provider_preset_expansion.py  test_provider_probe.py  test_security_settings.py  test_shared.py  test_skills_hub_errors.py  test_storage_browse.py  test_storage_probe.py  test_storage_spec.py  test_tool_guard_rules_store.py  test_ulid.py  test_usage_thread_totals.py  test_user_locale.py  test_user_manager.py  test_voice_manager.py  test_wizard_password.py  test_wizard_token.py  test_workspace_download.py
tests/unit/agents/: test_acp_settings.py  (+12 more)
(+782 files in other folders)
